avoid flickering in desktop browser when changing generator values by always showing scroll bar

--- a/static/global.css
+++ b/static/global.css
@@ -1,3 +1,4 @@
+html { overflow-y:scroll }
 body {
 	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"
 }
